--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url('../bg.jpg') no-repeat center center/cover;
+    background: url('/bg.jpg') no-repeat center center/cover;
     height: 120vh;
 }
 .logo{
